# 1058_ILW_BE

./: .gitignore  config.py  pyproject.toml  utils.py
Auth0_Deployment/: Auth0_customdb_function.js
Database_Deployment/: ILW_db_creation.sql
docs/source/: conf.py  index.rst  modules.rst  src.db.rst  src.routers.rst  src.rst
src/: .gitignore  crud.py  main.py  schemas.py
src/db/: database.py  models.py
src/routers/: __init__.py  items.py
