[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daniel Kopecký <kopecky.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
