[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daniel Kopecký <kopecky.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.8.1"
pyjwt = "^2.10.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
autodoc-pydantic = "^2.2.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
